--- a/myQRcode/Storyboards/de.lproj/Generate.storyboard
+++ b/myQRcode/Storyboards/de.lproj/Generate.storyboard
@@ -33,7 +33,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Content of the QR code" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="DwH-hJ-Ipd">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Inhalt des QR Codes" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="DwH-hJ-Ipd">
                                                     <rect key="frame" x="16" y="0.0" width="343" height="44"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="yes" keyboardType="alphabet" returnKeyType="done"/>
@@ -57,7 +57,7 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBE-FK-kol">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                    <state key="normal" title="Generate QR code"/>
+                                                    <state key="normal" title="QR Code generieren"/>
                                                     <connections>
                                                         <action selector="sendButtonAction:" destination="0zn-sQ-Gnv" eventType="touchUpInside" id="KEP-5k-cNQ"/>
                                                     </connections>
@@ -88,13 +88,13 @@
                                                         <constraint firstAttribute="width" secondItem="cpL-AM-lsy" secondAttribute="height" multiplier="1:1" id="ok3-Wq-bcf"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No QR code generated yet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njC-gD-BiU">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bisher kein QR Code generiert" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njC-gD-BiU">
                                                     <rect key="frame" x="87.5" y="119" width="200" height="62.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="200" id="oRP-16-Jtl"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -120,7 +120,7 @@
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X4f-wI-1Pm">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                    <state key="normal" title="Export generated QR code"/>
+                                                    <state key="normal" title="Generierten QR Code exportieren"/>
                                                     <connections>
                                                         <action selector="shareImageButton:" destination="0zn-sQ-Gnv" eventType="touchUpInside" id="wPa-mg-ILn"/>
                                                     </connections>
@@ -145,7 +145,7 @@
                             <outlet property="delegate" destination="0zn-sQ-Gnv" id="Kgs-eU-nul"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Generate" image="qrcode" catalog="system" id="YWT-57-rL4"/>
+                    <tabBarItem key="tabBarItem" title="Generieren" image="qrcode" catalog="system" id="YWT-57-rL4"/>
                     <navigationItem key="navigationItem" title="myQRcode" id="hFD-uy-cC7">
                         <barButtonItem key="leftBarButtonItem" title="About" image="Settings" id="mbM-68-iH4">
                             <connections>
@@ -165,17 +165,17 @@
             </objects>
             <point key="canvasLocation" x="2039" y="-1003"/>
         </scene>
-        <!--Scan-->
+        <!--Scannen-->
         <scene sceneID="Art-rM-GSU">
             <objects>
                 <navigationController id="AU4-jO-K6m" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Scan" image="qrcode.viewfinder" catalog="system" id="ncB-JF-mBv"/>
+                    <tabBarItem key="tabBarItem" title="Scannen" image="qrcode.viewfinder" catalog="system" id="ncB-JF-mBv"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bMh-gR-ACU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="rsq-R3-6nG" kind="relationship" relationship="rootViewController" id="2e9-UC-oSN"/>
+                        <segue destination="EI8-g5-pW7" kind="relationship" relationship="rootViewController" id="DDW-40-k5q"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EnQ-PY-6wr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -183,20 +183,20 @@
             <point key="canvasLocation" x="1170" y="-298"/>
         </scene>
         <!--Scan-->
-        <scene sceneID="kqV-hH-UQY">
+        <scene sceneID="gRf-KO-fJ3">
             <objects>
-                <viewControllerPlaceholder storyboardName="Scan" id="rsq-R3-6nG" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="3fv-6b-CVV"/>
+                <viewControllerPlaceholder storyboardName="Scan" id="EI8-g5-pW7" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="WVy-xM-xnI"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4OW-eq-kvc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qrz-Cs-mVz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1818" y="-299"/>
+            <point key="canvasLocation" x="1686" y="-299"/>
         </scene>
         <!--Navigation-->
         <scene sceneID="hwl-Wn-yNz">
             <objects>
                 <navigationController title="Navigation" automaticallyAdjustsScrollViewInsets="NO" id="GAg-Vh-DJw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Generate" image="qrcode" catalog="system" id="Dip-om-eee"/>
+                    <tabBarItem key="tabBarItem" title="Generieren" image="qrcode" catalog="system" id="Dip-om-eee"/>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="dQp-Ed-dkF">
