--- a/myQRcode/Storyboards/de.lproj/Scan.storyboard
+++ b/myQRcode/Storyboards/de.lproj/Scan.storyboard
@@ -8,19 +8,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Scan-->
+        <!--Scannen-->
         <scene sceneID="Hav-R8-dkw">
             <objects>
-                <viewController title="Scan" id="YYb-AG-PfO" customClass="ScanViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Scannen" id="YYb-AG-PfO" customClass="ScanViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OMD-Mb-ige">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="nAa-mU-17H"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Scan" id="jMO-wS-otb"/>
+                    <navigationItem key="navigationItem" title="Scannen" id="jMO-wS-otb"/>
                     <connections>
                         <segue destination="eWd-Zz-orO" kind="presentation" identifier="resultSegue" id="Dq6-Oj-fE6"/>
+                        <segue destination="3VH-yp-5Jc" kind="show" identifier="errorSegue" id="2Gd-T9-l2o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wP5-YN-7cU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -41,8 +42,8 @@
                                     <constraint firstAttribute="height" constant="56" id="EhM-gj-O7u"/>
                                 </constraints>
                                 <items>
-                                    <navigationItem title="Result" id="weY-8y-NRz">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="qYL-yu-zT8">
+                                    <navigationItem title="Ergebnis" id="weY-8y-NRz">
+                                        <barButtonItem key="leftBarButtonItem" title="Schließen" style="done" id="qYL-yu-zT8">
                                             <connections>
                                                 <action selector="dismiss:" destination="eWd-Zz-orO" id="WrB-gb-fTM"/>
                                             </connections>
@@ -50,25 +51,35 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6H9-5X-CJh">
-                                <rect key="frame" x="8" y="64" width="359" height="575"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6H9-5X-CJh">
+                                <rect key="frame" x="8" y="93" width="359" height="546"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
                             </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inhalt des gescannten QR Codes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibm-qI-zCd">
+                                <rect key="frame" x="12" y="64" width="351" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="trailing" secondItem="ibm-qI-zCd" secondAttribute="trailing" constant="12" id="ATF-sH-6wq"/>
                             <constraint firstItem="RcF-I1-aFd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" id="M0L-Xr-Rxj"/>
                             <constraint firstItem="RcF-I1-aFd" firstAttribute="trailing" secondItem="A3K-Jk-KN9" secondAttribute="trailing" id="N95-Rt-INc"/>
                             <constraint firstItem="A3K-Jk-KN9" firstAttribute="bottom" secondItem="6H9-5X-CJh" secondAttribute="bottom" constant="8" id="VII-xQ-mLu"/>
                             <constraint firstItem="RcF-I1-aFd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" id="YeS-QJ-tkH"/>
                             <constraint firstItem="6H9-5X-CJh" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" constant="8" id="cja-5s-vTv"/>
-                            <constraint firstItem="6H9-5X-CJh" firstAttribute="top" secondItem="RcF-I1-aFd" secondAttribute="bottom" constant="8" id="i1Z-l3-OyZ"/>
+                            <constraint firstItem="6H9-5X-CJh" firstAttribute="top" secondItem="ibm-qI-zCd" secondAttribute="bottom" constant="8" id="fuG-rp-tmo"/>
                             <constraint firstItem="RcF-I1-aFd" firstAttribute="trailing" secondItem="A3K-Jk-KN9" secondAttribute="trailing" id="jLr-cZ-Eft"/>
+                            <constraint firstItem="ibm-qI-zCd" firstAttribute="top" secondItem="RcF-I1-aFd" secondAttribute="bottom" constant="8" id="kfi-CC-zdh"/>
                             <constraint firstItem="A3K-Jk-KN9" firstAttribute="trailing" secondItem="6H9-5X-CJh" secondAttribute="trailing" constant="8" id="mr7-nG-0N0"/>
                             <constraint firstItem="RcF-I1-aFd" firstAttribute="top" secondItem="A3K-Jk-KN9" secondAttribute="top" id="n6D-MB-Z7w"/>
+                            <constraint firstItem="ibm-qI-zCd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" constant="12" id="qUK-m0-yjl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="A3K-Jk-KN9"/>
                     </view>
@@ -78,7 +89,37 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4RW-e2-Qxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1173.5999999999999" y="140.77961019490255"/>
+            <point key="canvasLocation" x="1173.5999999999999" y="139.880059970015"/>
+        </scene>
+        <!--Fehlende Berechtigungen-->
+        <scene sceneID="Dc4-PD-hHh">
+            <objects>
+                <viewController title="Fehlende Berechtigungen" id="3VH-yp-5Jc" customClass="ScanRequestAccessViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dsH-9f-gTw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitte aktiviere den Kamera  Zugriff in den Einstellungen" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVk-Qb-PIK">
+                                <rect key="frame" x="16" y="303" width="343" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="EVk-Qb-PIK" firstAttribute="centerX" secondItem="dsH-9f-gTw" secondAttribute="centerX" id="DYN-7O-rEb"/>
+                            <constraint firstAttribute="trailing" secondItem="EVk-Qb-PIK" secondAttribute="trailing" constant="16" id="PHF-7K-lQT"/>
+                            <constraint firstItem="EVk-Qb-PIK" firstAttribute="centerY" secondItem="dsH-9f-gTw" secondAttribute="centerY" id="krN-j6-F1C"/>
+                            <constraint firstItem="EVk-Qb-PIK" firstAttribute="leading" secondItem="BRo-WH-rhg" secondAttribute="leading" constant="16" id="qpP-lB-U1h"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BRo-WH-rhg"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="JkF-6E-81G"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uHl-Ds-42f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="444" y="830"/>
         </scene>
     </scenes>
 </document>
