--- a/myQRcode/Storyboards/Base.lproj/Generate.storyboard
+++ b/myQRcode/Storyboards/Base.lproj/Generate.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="A1w-WY-ICU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GAg-Vh-DJw">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -153,7 +153,7 @@
                             <outlet property="delegate" destination="0zn-sQ-Gnv" id="Kgs-eU-nul"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Generate" image="qrcode" catalog="system" id="YWT-57-rL4"/>
+                    <tabBarItem key="tabBarItem" title="Generate" image="Generate-Icon" id="YWT-57-rL4"/>
                     <navigationItem key="navigationItem" title="myQRcode" id="hFD-uy-cC7">
                         <barButtonItem key="leftBarButtonItem" title="About" image="Settings" id="mbM-68-iH4">
                             <connections>
@@ -182,22 +182,11 @@
             </objects>
             <point key="canvasLocation" x="2039" y="-1003"/>
         </scene>
-        <!--Scan-->
-        <scene sceneID="WXC-fI-GyG">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Scan" id="DuO-Ma-m4p" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Un4-9b-sBJ"/>
-                    <navigationItem key="navigationItem" id="avW-38-2Md"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2rs-Ba-aCV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1211" y="-435"/>
-        </scene>
         <!--Navigation-->
         <scene sceneID="hwl-Wn-yNz">
             <objects>
                 <navigationController title="Navigation" automaticallyAdjustsScrollViewInsets="NO" id="GAg-Vh-DJw" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Generate" image="qrcode" catalog="system" id="Dip-om-eee"/>
+                    <tabBarItem key="tabBarItem" title="Generate" id="Dip-om-eee"/>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="dQp-Ed-dkF">
@@ -216,30 +205,11 @@
             </objects>
             <point key="canvasLocation" x="1170" y="-1003"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="Zww-gb-C1N">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="A1w-WY-ICU" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="B1i-7S-5IU">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="GAg-Vh-DJw" kind="relationship" relationship="viewControllers" id="JO3-Tj-8Lc"/>
-                        <segue destination="DuO-Ma-m4p" kind="relationship" relationship="viewControllers" id="adx-CT-MGs"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7Yn-aC-NsF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="216.80000000000001" y="-672.41379310344837"/>
-        </scene>
     </scenes>
     <resources>
         <image name="Blank QR" width="258" height="258"/>
+        <image name="Generate-Icon" width="25" height="25"/>
         <image name="History-Icon" width="25" height="25"/>
         <image name="Settings" width="25" height="25"/>
-        <image name="qrcode" catalog="system" width="128" height="114"/>
     </resources>
 </document>
