--- a/myQRcode/Storyboards/Base.lproj/History.storyboard
+++ b/myQRcode/Storyboards/Base.lproj/History.storyboard
@@ -98,7 +98,7 @@
                     </connections>
                 </view>
             </objects>
-            <point key="canvasLocation" x="944.92753623188412" y="133.92857142857142"/>
+            <point key="canvasLocation" x="793" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rLa-gn-JKA">
